discussion/kv_engine/155717/155717_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Refactor: EngineIface to use references over gsl::not_null<>

Replace gsl::not_null<> with ref to the type

This patch was created following these steps:
1. Use CLion's refactor signature functionality for each method in
DcpIface.
2. Add derefs or refs where needed, found by compiling the source
code.

Change-Id: Iff5327c05d10b9fc94438231e0c09eecae063d53

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-06-14 10:48:20.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-14 11:23:41.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36840/ : FAILURE

Failure of GoogleTest "ExecutorPoolEpEngineTest/1.PoolThreadsAreRegisteredWithPhosphor":

<pre>
[ RUN      ] ExecutorPoolEpEngineTest/1.PoolThreadsAreRegisteredWithPhosphor
unknown file: error: C++ exception with description "CouchKVStore::initialize: openDB error:no such file, file_name:./test/2.couch.0" thrown in SetUp().
[  FAILED  ] ExecutorPoolEpEngineTest/1.PoolThreadsAreRegisteredWithPhosphor, where TypeParam = class FollyExecutorPool (39 ms)
ExecutorPoolEpEngineTest/1.PoolThreadsAreRegisteredWithPhosphor
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36840/ )

Failure of an engine_testapp test:

<pre>
Running [0023/0045]: test add meta conflict resolution...(7 ms) SKIPPED


99% tests passed, 2 tests failed out of 407

Total Test time (real) = 336.00 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36840/ )

Timeout of a CTest test 407/407 Test #286: ep_testsuite_xdcr.ephemeral.comp_active .......................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36840/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9852/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9852/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9852/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10503/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10503/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8440/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/363/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31475/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11423/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11575/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11848/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19437/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-14 12:28:30.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9852/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9852/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9852/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36852/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36852/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8440/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/363/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31475/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10515/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11423/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11575/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11848/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19437/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-14 12:48:37.000000000
Message: 
Patch Set 1: Code-Review+1

Do we still need inculde gsl-lite.hpp in engine.h?
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-06-14 13:41:20.000000000
Message: 
Patch Set 1:

> Patch Set 1: Code-Review+1
> 
> Do we still need inculde gsl-lite.hpp in engine.h?

No don't think we need it anymore and so I've removed it, though made me spot an issue with release() so I'm making changes for that. Plus there appears to be a build bug on windows that I'll fix in a re-upload of this patch.
----------------------------------------------------------------------------------------------------------------------
